--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    
     <title>Sonhos de Mâe</title>
+    <link rel="shortcut icon" href="assets/icone.ico" >
 </head>
 
 <body>
@@ -18,9 +19,9 @@
         <div class="content">
             <header>
                 <div class="container">
-                    <nav class="navbar navbar-expand-lg" style="background-color: white" id="logo">
+                    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white" id="logo">
                         <a id="navSpace" class="navbar-brand" href="#">
-                            <img src="assets/ícone.png" class="img-fluid"></a>
+                            <img src="assets/icone.png" class="img-fluid"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 
                             <span class="navbar-toggler-icon"></span>
